--- a/Desktop/src/Vizsgaremek/Pages/ProgramVersion.xaml
+++ b/Desktop/src/Vizsgaremek/Pages/ProgramVersion.xaml
@@ -19,6 +19,29 @@
                 <Label>Program verzió: </Label>
                 <TextBox x:Name="txtVersion" Text="{Binding Path=Version}" IsReadOnly="True"/>
             </StackPanel>
+            
+            <StackPanel Orientation="Horizontal">
+                <Label>A program neve: </Label>
+                <TextBox x:Name="txtTitle" Text="{Binding Path=Title}" IsReadOnly="True"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal">
+                <Label>A program leírása:</Label>
+                <TextBox x:Name="txtDescription" Text="{Binding Path=Description}" IsReadOnly="True"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal">
+                <Label>A program Tulajdonosa</Label>
+                <TextBox x:Name="txtAuthors" Text="{Binding Path=Authors}" IsReadOnly="True"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal">
+                <Label>A cég neve:</Label>
+                <TextBox x:Name="txtCompany" Text="{Binding Path=Company}" IsReadOnly="True"/>
+            </StackPanel>
+
+
+
         </StackPanel>
     </StackPanel>
 </UserControl>
