--- a/Desktop/src/Vizsgaremek/Views/MainWindow.xaml
+++ b/Desktop/src/Vizsgaremek/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vizsgaremek"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1024" Width="1280" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
+        Title="MainWindow" Height="960" Width="1280" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None">
     <Grid>
         <Grid Width="1030" x:Name="RightPanel" HorizontalAlignment="Right">
             <Grid x:Name="PageHeader" Height="150" VerticalAlignment="Top" Background="Wheat">
@@ -31,6 +31,15 @@
                             </TextBlock>
                         </StackPanel>
                     </ListViewItem>
+                    
+                    <ListViewItem Height="30" x:Name="lviDatabaseSourceSelection" FontFamily="Century Gothic" FontSize="13" Foreground="White">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Margin="2 2 2 2">
+                                Adatbázis forrás választás
+                            </TextBlock>
+                        </StackPanel>
+                    </ListViewItem>
+                    
                     <ListViewItem Height="30" x:Name="lviExit" FontFamily="Century Gothic" FontSize="13" Foreground="White">
                         <StackPanel Orientation="Horizontal">
                             <Image Height="20" Source="/Icons/exit.png" Margin="5 2 5 2"/>
@@ -39,7 +48,11 @@
                             </TextBlock>
                         </StackPanel>
                     </ListViewItem>
+
                     
+
+
+
                 </ListView>
             </Grid>
         </Grid>
